# gpu-examples

hip/: CMakeLists.txt  rebuild
hip/DeviceQuery/: DeviceQuery.hip
hip/DeviceQuery/logs/: gfx1100.txt  mi210.txt  mi250.txt  mi300.txt
hip/VectorAdd/: VectorAdd.hip
hip/VectorAddThrust/: VectorAddThrust.hip
